<resources>
    <string name="app_name">UAS 180030045 1</string>
    <string name="id_film">ID Film</string>
    <string name="judul_film">Judul Film</string>
    <string name="gambar">Ilustrasi Gambar</string>
    <string name="genre">Genre Film</string>
    <string name="durasi">Durasi Film</string>
    <string name="tahun">Tahun Tayang Film</string>
    <string name="sinopsis_film">Sinopsis Film</string>
    <string name="pemeran_film">Pemeran Film</string>
    <string name="tambah">Tambah Film</string>
    <string name="edit">Edit Film</string>
    <string name="hapus">Hapus Film</string>
    <string name="titik_dua">:</string>
    <string name="simpan">Simpan</string>
    <string name="data_film">Data Film</string>
</resources>
